fix(kit): `InputRange` with `[content]=[..., end]` has always invisible end textfield (#12848)

--- a/projects/core/styles/components/textfield.less
+++ b/projects/core/styles/components/textfield.less
@@ -232,7 +232,7 @@ tui-textfield {
         align-items: center;
     }
 
-    &._with-template [tuiInput] {
+    &._with-template [tuiInput]:first-of-type {
         color: transparent !important;
     }
 
